# token-multi-sending

./: .env  Anchor.toml  initial.sh  package-lock.json  package.json
programs/multi-airdrop/: Cargo.toml
programs/multi-airdrop/src/: lib.rs
tests/: multi-airdrop.js
